@@ -1,21 +1,29 @@
-import {Component } from '@angular/core';
+import {Component, OnInit } from '@angular/core';
 import { mock_product_list } from '../cards/sidecards/mock-product';
 import { ProductItemModel } from '../cards/sidecards/product-item-model';
+import { StoryService } from '../cards/sidecards/story.service';
 
 
 @Component({
     selector: 'home',
     templateUrl: 'home.component.html'
 })
-export class HomeComponent{
+export class HomeComponent implements OnInit {
     products: ProductItemModel [] = [];
 
-  constructor()
+  constructor(private service: StoryService)
   {
-    for (var product of mock_product_list)
-    {
-      console.log(product);
-      this.products.push(product);
-    }
+    
   }
+  
+  ngOnInit(): void {
+    console.log("Fetch data");
+    this.service.getStories().subscribe(data => {
+        console.log(data);
+        for(var product of data){
+          this.products.push(product);
+        }
+      });
+    }
+
 }
